Fix pop-balloon popup sizing and back-button outline in Chrome
- .pop-balloon.enyo-popup: reset border-width to 9px and clear the
  enyo-popup 24px popup.png border-image from compat CSS. Without this,
  the compat CSS's unprefixed border-image (24px popup.png) wins over
  the -webkit-only balloon-bg images, making popups ~30px too large.
- Add unprefixed border-image to .white/.sepia/.black.pop-balloon so
  the balloon background renders in modern Chrome.
- .back-button: add border-image: none (unprefixed) so the compat CSS's
  button-up.png border-image no longer applies, removing the unwanted
  outline on the back-arrow button.

--- a/com.palm.codepoet.papyrus/app/reading/BookReader.css
+++ b/com.palm.codepoet.papyrus/app/reading/BookReader.css
@@ -140,8 +140,9 @@
 }
 
 .book-reader-bottom .back-button {
-	-webkit-border-image:none;
-	background-color:transparent;
+	-webkit-border-image: none;
+	border-image: none;
+	background-color: transparent;
 }
 
 .reading-book-title {
@@ -534,8 +535,15 @@
 White
 -----------------*/
 
+/* pop-balloon popups use 9px balloon images, not the 24px enyo-popup default */
+.pop-balloon.enyo-popup {
+	border-width: 9px;
+	border-image: none;
+}
+
 .white.pop-balloon {
 	-webkit-border-image: url(../../images/popup-balloon-bg-white.png) 9 9 9 9;
+	border-image: url(../../images/popup-balloon-bg-white.png) 9 9 9 9 fill stretch;
 }
 .white .balloon-top {
 	background-position: 0 0;
@@ -603,6 +611,7 @@ Sepia
 -----------------*/
 .sepia.pop-balloon {
 	-webkit-border-image: url(../../images/popup-balloon-bg-sepia.png) 9 9 9 9;
+	border-image: url(../../images/popup-balloon-bg-sepia.png) 9 9 9 9 fill stretch;
 }
 .sepia .balloon-top {
 	background-position: 0 -14px;
@@ -668,6 +677,7 @@ Black
 -----------------*/
 .black.pop-balloon {
 	-webkit-border-image: url(../../images/popup-balloon-bg-black.png) 9 9 9 9;
+	border-image: url(../../images/popup-balloon-bg-black.png) 9 9 9 9 fill stretch;
 }
 .black .balloon-top {
 	background-position: 0 -28px;
